--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
             <div class="nav" id="links">
                 <a class="link" href="https://twitter.com/kylehengst" target="_blank"><i class="fa fa-twitter"></i></a>
                 <a class="link" href="https://www.linkedin.com/in/kylehengst" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a class="link" href="https://github.com/kylehengst" target="_blank"><i class="fa fa-github"></i></a>
             </div>
 
             <header id="home">
                 <div>
                     <h1>Kyle Hengst</h1>
-                    <h2>Web Developer &amp; Designer</h2>
+                    <h2>Mid-level Full Stack Web Developer &amp; Designer</h2>
+                    <p>LEMP, HTML, CSS, JavaScript, Adobe CC</p>
                 </div>
             </header>
 
@@ -138,12 +140,12 @@
                     <h3>Cyberdesign Works</h3>
                     <p><a href="http://cyberdesignworks.com.au" target="_blank">cyberdesignworks.com.au</a></p>
                     <ul>
-                        <li>complete design and front and backe end development</li>
+                        <li>complete design and front and back end development</li>
                     </ul>
                     <h3>Makinex</h3>
                     <p><a href="http://makinex.com.au" target="_blank">makinex.com.au</a></p>
                     <ul>
-                        <li>complete design and front and backe end development</li>
+                        <li>complete design and front and back end development</li>
                     </ul>
                     <h3>Ecosmart Fire</h3>
                     <p><a href="http://ecosmartfire.com.au" target="_blank">ecosmartfire.com.au</a></p>
@@ -155,7 +157,7 @@
                     <h3>My Net Fone</h3>
                     <p><a href="http://mynetfone.com.au" target="_blank">mynetfone.com.au</a></p>
                     <ul>
-                        <li>complete design and front and backe end development</li>
+                        <li>complete design and front and back end development</li>
                     </ul>
 
                 </div>
@@ -202,6 +204,14 @@
                         <li>integration with with Bitcoin blockchain.info API</li>
                     </ul>
 
+                    <h3><a href="http://bitcenta.com" target="_blank">bitcenta.com</a></h3>
+                    <p>creat your own online store</p>
+                    <ul>
+                        <li>built using Angular JS</li>
+                        <li>uses Firebase as the data source</li>
+                        <li>user Algolia for search</li>
+                    </ul>
+
                     <h3><a href="http://timetracker.kylehengst.com" target="_blank">timetracker.kylehengst.com</a></h3>
                     <p>project time tracker</p>
                     <ul>
@@ -216,8 +226,9 @@
                 <div class="container">
                     <h2>References</h2>
                     <p><strong>John Bonato,</strong> Director, Cyberdesign
-                    <br /><strong>Jason Fonseca,</strong> Manager, 2DataFish
+                    <br /><strong>Jason Fonseca,</strong> Associte Director, 2DataFish
                     <br /><strong>Liam Ma,</strong> Web Developer, ninemsn</p>
+                    <br /><strong>Matt Knox,</strong> Director / Web Developer, Codelab</p>
                 </div>
             </section>
 
