--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
             <section id="experience">
                 <div class="container">
                     <h2>Experience</h2>
+                    <h3>Codelab Pty Ltd</h3>
+                    <p>November 2015 - Present</p>
+                    <ul>
+                        <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
+                        <li>Custom Magento 2 modules.</li>
+                        <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
+                    </ul>
                     <h3>Cyberdesign Works</h3>
-                    <p>When I started in 2001 Cyberdesign was almost exclusively a print-based graphic design operation with a staff of 3. My interest in web design helped transform the company into a design and development agency that builds websites and mobile applications. The company now has a staff 7.</p>
+                    <p>When I started in 2001 Cyberdesign was almost exclusively a print-based graphic design operation with a staff of 3. My interest in web design helped transform the company into a design and development agency that builds websites and mobile applications.</p>
                     <p><strong>Career Progression</strong></p>
                     <ul>
                         <li>2001 Work Experience, while at COFA, UNSW</li>
