--- a/index.html
+++ b/index.html
@@ -62,14 +62,27 @@
             <section id="experience">
                 <div class="container">
                     <h2>Experience</h2>
-                    <h3>Codelab Pty Ltd</h3>
-                    <p>November 2015 - Present</p>
-                    <ul>
-                        <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
-                        <li>Custom Magento 2 modules.</li>
-                        <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
-                    </ul>
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <h3>Codelab Pty Ltd</h3>
+                            <p>November 2015 - Present (Contractor)</p>
+                            <ul>
+                                <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
+                                <li>Custom Magento 2 modules.</li>
+                                <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
+                            </ul>
+                        </div>
+                        <div class="col-sm-6">
+                            <h3>2DataFish</h3>
+                            <p>March 2016 - Present (Contractor)</p>
+                            <ul>
+                                <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
+                            </ul>
+                        </div>
+                    </div>
+
                     <h3>Cyberdesign Works</h3>
+                    <p>2001 - 2015</p>
                     <p>When I started in 2001 Cyberdesign was almost exclusively a print-based graphic design operation with a staff of 3. My interest in web design helped transform the company into a design and development agency that builds websites and mobile applications.</p>
                     <p><strong>Career Progression</strong></p>
                     <ul>
