--- a/index.html
+++ b/index.html
@@ -61,25 +61,21 @@
 
             <section id="experience">
                 <div class="container">
+
                     <h2>Experience</h2>
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h3>Codelab Pty Ltd</h3>
-                            <p>November 2015 - Present (Contractor)</p>
-                            <ul>
-                                <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
-                                <li>Custom Magento 2 modules.</li>
-                                <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
-                            </ul>
-                        </div>
-                        <div class="col-sm-6">
-                            <h3>2DataFish</h3>
-                            <p>March 2016 - Present (Contractor)</p>
-                            <ul>
-                                <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
-                            </ul>
-                        </div>
-                    </div>
+
+                    <h3>Codelab Pty Ltd</h3>
+                    <p>November 2015 - Present (Contractor)</p>
+                    <ul>
+                        <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
+                        <li>Custom Magento 2 modules.</li>
+                        <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
+                    </ul>
+                    <h3>2DataFish</h3>
+                    <p>March 2016 - Present (Contractor)</p>
+                    <ul>
+                        <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
+                    </ul>
 
                     <h3>Cyberdesign Works</h3>
                     <p>2001 - 2015</p>
@@ -234,6 +230,8 @@
                     <h3><a href="http://timetracker.kylehengst.com" target="_blank">timetracker.kylehengst.com</a></h3>
                     <p>project time tracker</p>
                     <ul>
+                        <li><a href="https://github.com/kylehengst/timetracker">https://github.com/kylehengst/timetracker</a></li>
+                        <li>built using Angular JS</li>
                         <li>built using Angular JS</li>
                         <li>uses Firebase as the data source</li>
                         <li>stopwatch utilising local storage</li>
