--- a/index.html
+++ b/index.html
@@ -242,10 +242,12 @@
             <section id="references">
                 <div class="container">
                     <h2>References</h2>
-                    <p><strong>John Bonato,</strong> Director, Cyberdesign
-                    <br /><strong>Jason Fonseca,</strong> Associte Director, 2DataFish
-                    <br /><strong>Liam Ma,</strong> Web Developer, ninemsn</p>
-                    <br /><strong>Matt Knox,</strong> Director / Web Developer, Codelab</p>
+                    <p>
+                        <strong>John Bonato,</strong> Director, Cyberdesign
+                        <br /><strong>Jason Fonseca,</strong> Associte Director, 2DataFish
+                        <br /><strong>Liam Ma,</strong> Web Developer, ninemsn
+                        <br /><strong>Matt Knox,</strong> Director / Web Developer, Codelab
+                    </p>
                 </div>
             </section>
 
