--- a/index.html
+++ b/index.html
@@ -151,12 +151,12 @@
                          <li>address verification on checkout</li>
                          <li>paypal integration</li>
                          <li>customisable delivery rules based on location and day of the week</li>
-                    </ul>
-                    <h3>Cyberdesign Works</h3>
-                    <p><a href="http://cyberdesignworks.com.au" target="_blank">cyberdesignworks.com.au</a></p>
-                    <ul>
-                        <li>complete design and front and back end development</li>
-                    </ul>
+                    <!--</ul>-->
+                    <!--<h3>Cyberdesign Works</h3>-->
+                    <!--<p><a href="http://cyberdesignworks.com.au" target="_blank">cyberdesignworks.com.au</a></p>-->
+                    <!--<ul>-->
+                        <!--<li>complete design and front and back end development</li>-->
+                    <!--</ul>-->
                     <h3>Makinex</h3>
                     <p><a href="http://makinex.com.au" target="_blank">makinex.com.au</a></p>
                     <ul>
@@ -173,6 +173,12 @@
                     <p><a href="http://mynetfone.com.au" target="_blank">mynetfone.com.au</a></p>
                     <ul>
                         <li>complete design and front and back end development</li>
+                    </ul>
+                    <h3>Sanscode Sites</h3>
+                    <ul>
+                        <li><a href="https:/www.abcbullion.com.au">ABC Bullion</a></li>
+                        <li><a href="https:/chatime.com.au">Cha Time</a></li>
+                        <li><a href="https:/rocseasonalshoes.com.au">Roc</a></li>
                     </ul>
 
                 </div>
