--- a/index.html
+++ b/index.html
@@ -218,26 +218,34 @@
                 <div class="container">
                     <h2>Experiments</h2>
 
+                    <h3><a href="https://toolbox.esce.co/" target="_blank"toolbox.esce.co</a></h3>
+                    <p>Responsive SMS marketing</p>
+                    <ul>
+                        <li>built using the Laravel 4 framework</li>
+                        <li>integration with Twilio</li>
+                        <li>responsive SMS campaigns, i.e. respond to subscriber based on keywords</li>
+                        <li>stripe integration, including recurring billing</li>
+                    </ul>
+
                     <h3><a href="http://sparklet.net" target="_blank">sparklet.net</a></h3>
-                    <p>online internet dating</p>
+                    <p>Online internet dating</p>
                     <ul>
                         <li>built using the Laravel 5 framework</li>
-                        <li>integration with with Bitcoin blockchain.info API</li>
+                        <li>integration with Bitcoin blockchain.info API</li>
                     </ul>
 
                     <h3><a href="http://bitcenta.com" target="_blank">bitcenta.com</a></h3>
-                    <p>creat your own online store</p>
+                    <p>Create your own online store</p>
                     <ul>
                         <li>built using Angular JS</li>
                         <li>uses Firebase as the data source</li>
-                        <li>user Algolia for search</li>
+                        <li>uses Algolia for search</li>
                     </ul>
 
                     <h3><a href="http://timetracker.kylehengst.com" target="_blank">timetracker.kylehengst.com</a></h3>
                     <p>project time tracker</p>
                     <ul>
                         <li><a href="https://github.com/kylehengst/timetracker">https://github.com/kylehengst/timetracker</a></li>
-                        <li>built using Angular JS</li>
                         <li>built using Angular JS</li>
                         <li>uses Firebase as the data source</li>
                         <li>stopwatch utilising local storage</li>
