--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <header id="home">
                 <div>
                     <h1>Kyle Hengst</h1>
-                    <h2>Mid-level Full Stack Web Developer &amp; Designer</h2>
+                    <h2>Full Stack Web Developer &amp; Designer</h2>
                     <p>LEMP, HTML, CSS, JavaScript, Adobe CC</p>
                 </div>
             </header>
