--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
             </header>
 
             <section id="details">
-                <p>&#43;&#54;&#49; &#52;&#49;&#54; &#53;&#56;&#57; &#52;&#48;&#54; &ndash; kyle&#46;hengst&#64;gmail&#46;com</p>
-                <p>Naremburn, NSW</p>
+                <p>kyle&#46;hengst&#64;gmail&#46;com</p>
             </section>
 
             <section id="experience">
@@ -75,6 +74,8 @@
                     <p>March 2016 - Present (Contractor)</p>
                     <ul>
                         <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
+                        <li>Bespoke data extraction and transformation.</li>
+                        <li>NodeJS, Javascript, AWS</li>
                     </ul>
 
                     <h3>Cyberdesign Works</h3>
