--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
                     <ul>
                         <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
                         <li>Bespoke data extraction and transformation.</li>
-                        <li>NodeJS, Javascript, AWS</li>
+                        <li>Clients include: Virgin Australia, PNO Cruises, Dulux</li>
+                        <li>Stack used: NodeJS, Javascript, AWS</li>
                     </ul>
 
                     <h3>Cyberdesign Works</h3>
