--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Kyle Hengst</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="theme-color" content="#0386c9">
 
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <!-- Place favicon.ico in the root directory -->
@@ -64,14 +65,14 @@
                     <h2>Experience</h2>
 
                     <h3>Codelab Pty Ltd</h3>
-                    <p>November 2015 - Present (Contractor)</p>
+                    <p>November 2015 - June 2016 (Contractor)</p>
                     <ul>
                         <li>Updates to an existing AngularJS website that uses PostgreSQL and Go-Lang for a REST API.</li>
                         <li>Custom Magento 2 modules.</li>
                         <li>Product configurator using AngularJS and Slim PHP (REST API)</li>
                     </ul>
                     <h3>2DataFish</h3>
-                    <p>March 2016 - Present (Contractor)</p>
+                    <p>March 2016 - June 2016 (Contractor)</p>
                     <ul>
                         <li>Data analytics integration using Adobe Test and Target / Dynamic Test Management</li>
                         <li>Bespoke data extraction and transformation.</li>
@@ -140,11 +141,9 @@
                     <p><a href="http://lostpetfinders.com.au" target="_blank">lostpetfinders.com.au</a></p>
                     <ul>
                         <li>responsive UI development</li>
-                        <li>geo location of all available Australian, New Zealand and UK residential addresses using Google maps API and Rackspace server API </li>
-                        <li>integration with the Twilio mobile messaging and phone service API</li>
-                        <li>integration with the Mailgun API</li>
-                        <li>optimisation of residential address querying</li>
-                        <li>integration with Braintree API</li>
+                        <li>geo located millions of residential addresses</li>
+                        <li>optimisation of address querying based on user location</li>
+                        <li>integration with 3rd party messaging and payment APIs</li>
                     </ul>
                     <h3>Snowgoose</h3>
                     <p><a href="http://snowgoose.com.au" target="_blank">snowgoose.com.au</a></p>
@@ -159,11 +158,6 @@
                     <!--<ul>-->
                         <!--<li>complete design and front and back end development</li>-->
                     <!--</ul>-->
-                    <h3>Makinex</h3>
-                    <p><a href="http://makinex.com.au" target="_blank">makinex.com.au</a></p>
-                    <ul>
-                        <li>complete design and front and back end development</li>
-                    </ul>
                     <h3>Ecosmart Fire</h3>
                     <p><a href="http://ecosmartfire.com.au" target="_blank">ecosmartfire.com.au</a></p>
                     <ul>
@@ -178,7 +172,6 @@
                     </ul>
                     <h3>Sanscode Sites</h3>
                     <ul>
-                        <li><a href="https:/www.abcbullion.com.au">ABC Bullion</a></li>
                         <li><a href="https:/chatime.com.au">Cha Time</a></li>
                         <li><a href="https:/rocseasonalshoes.com.au">Roc</a></li>
                     </ul>
@@ -211,7 +204,7 @@
                     </ul>
                     <h3>Experience with</h3>
                     <ul>
-                        <li>GIT, AWS, Rackspace, Firebase, MongoDB, Wordpress, Actionscript 3, Sencha Touch, NodeJS, TDD</li>
+                        <li>GIT, NodeJS, AWS, Rackspace, Firebase, Actionscript 3, MongoDB, Wordpress, Magento 2</li>
                     </ul>
                 </div>
             </section>
@@ -219,6 +212,13 @@
             <section id="experiments">
                 <div class="container">
                     <h2>Experiments</h2>
+
+                    <h3><a href="https://projectevet.com.au/" target="_blank">projecteve.com.au</a></h3>
+                    <p>Financial planning tool</p>
+                    <ul>
+                        <li>built using the Laravel 5 framework</li>
+                        <li>utilises AngularJS and AmCharts</li>
+                    </ul>
 
                     <h3><a href="https://toolbox.esce.co/" target="_blank">toolbox.esce.co</a></h3>
                     <p>Responsive SMS marketing</p>
@@ -250,7 +250,6 @@
                         <li><a href="https://github.com/kylehengst/timetracker">https://github.com/kylehengst/timetracker</a></li>
                         <li>built using Angular JS</li>
                         <li>uses Firebase as the data source</li>
-                        <li>stopwatch utilising local storage</li>
                     </ul>
                 </div>
             </section>
