--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Kyle Hengst</title>
-        <meta name="description" content="">
+        <meta name="description" content="Full Stack Web Developer and Designer - LEMP, HTML, CSS, JavaScript, Adobe CC">
+        <meta name="keywords" content="lemp, lamp, html5, html, css, scss, js, javascript, adobe, photoshop, nodejs, git">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="theme-color" content="#0386c9">
 
