--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="container">
                     <h2>Experiments</h2>
 
-                    <h3><a href="https://projectevet.com.au/" target="_blank">projecteve.com.au</a></h3>
+                    <h3><a href="http://projecteve.com.au/" target="_blank">projecteve.com.au</a></h3>
                     <p>Financial planning tool</p>
                     <ul>
                         <li>built using the Laravel 5 framework</li>
