--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 
             <section id="experiments">
                 <div class="container">
-                    <h2>Experiments</h2>
+                    <h2>Personal Projects</h2>
 
                     <h3><a href="http://projecteve.com.au/" target="_blank">projecteve.com.au</a></h3>
                     <p>Financial planning tool</p>
