--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
                     <h3>Senior Web Developer</h3>
                     <p><strong>PushPull Technology</strong></p>
-                    <p>September 2018 - Present</p>
+                    <p>September 2018 - January 2022</p>
                     <ul>
                         <li>
                             Design and built a custom User Interface and VueJS
@@ -82,12 +82,18 @@
                         </li>
                         <li>
                             Built a custom internal reporting tool in VueJS and
-                            NodeJS based API.
+                            a NodeJS based API.
                         </li>
                         <li>
-                            Extending the new web app by building custom VueJS
+                            Extended the new web app by building custom VueJS
                             components and a NodeJS based API that integrates
                             with the Stripe payment API.
+                        </li>
+                        <li>Supervised and mentored junior staff members</li>
+                        <li>
+                            Worked with team to move to automated E2E testing
+                            using Cypress and implement CI/CD using Bitbucket
+                            pipelines and Docker
                         </li>
                     </ul>
                     <hr />
