--- a/index.html
+++ b/index.html
@@ -62,15 +62,16 @@
             <div class="row gx-5">
                 <div class="col-sm-8">
                     <h2>Experience</h2>
-
+                    
                     <h3>Senior Web Developer</h3>
                     <p><strong>PushPull Technology</strong></p>
+                    <p>Pushpull Technology is a UK based FinTech company delivering live data and workflow solutions.</p>
                     <p>September 2018 - January 2022</p>
                     <ul>
                         <li>
-                            Design and built a custom User Interface and VueJS
-                            component library to allow for rapid app
-                            development.
+                            Design and built a custom User Interface component
+                            library with VueJS and Tailwind to allow for rapid
+                            app development.
                         </li>
                         <li>
                             Rebuilt the existing AngularJS web app to VueJS
@@ -85,9 +86,8 @@
                             a NodeJS based API.
                         </li>
                         <li>
-                            Extended the new web app by building custom VueJS
-                            components and a NodeJS based API that integrates
-                            with the Stripe payment API.
+                            Extended the new web app by building a NodeJS based
+                            Rest API that integrates with the Stripe.
                         </li>
                         <li>Supervised and mentored junior staff members</li>
                         <li>
@@ -168,7 +168,7 @@
                         <li>2008 to 2015 Lead Developer</li>
                     </ul>
                     <p>
-                        One of my biggest accomplishment was developing an
+                        One of my biggest accomplishments was developing an
                         in-house content management system (CMS) called
                         <strong>Sanscode™</strong>. The CMS became a key
                         component of Cyberdesign’s sales and service strategy.
@@ -246,35 +246,31 @@
                     <ul>
                         <li>GIT, AWS, Firebase, WordPress, Ubuntu</li>
                     </ul>
+                    <h2>Education</h2>
+                    <p>
+                        <strong>Higher School Certificate,</strong> Pennant
+                        Hills High School & Cherrybrook Technology High School,
+                        1991 to 1996
+                    </p>
+                    <p>
+                        <strong>Pratt Institute, New York,</strong> Summer
+                        School, 1st Year Art Foundation, 1997 to 1998
+                    </p>
+                    <p>
+                        <strong>Bachelor of Design,</strong> UNSW, College of
+                        Fine Arts, 1999 to 2001
+                    </p>
+                    <h2>References</h2>
+                    <p>
+                        <strong>John Bonato,</strong> Director, Cyberdesign
+                        <br /><strong>Jason Fonseca,</strong> Associte Director,
+                        2DataFish <br /><strong>Liam Ma,</strong> Web Developer,
+                        ninemsn <br /><strong>Matt Knox,</strong> Director / Web
+                        Developer, Codelab <br /><strong>David Jones,</strong>
+                        PushPull Technology
+                    </p>
                 </div>
             </div>
-        </div>
-
-        <div class="container px-4 px-sm-0">
-            <h2>Education</h2>
-            <p>
-                <strong>Higher School Certificate,</strong> Pennant Hills High
-                School & Cherrybrook Technology High School, 1991 to 1996
-            </p>
-            <p>
-                <strong>Pratt Institute, New York,</strong> Summer School, 1st
-                Year Art Foundation, 1997 to 1998
-            </p>
-            <p>
-                <strong>Bachelor of Design,</strong> UNSW, College of Fine Arts,
-                1999 to 2001
-            </p>
-        </div>
-
-        <div class="container px-4 px-sm-0">
-            <h2>References</h2>
-            <p>
-                <strong>John Bonato,</strong> Director, Cyberdesign
-                <br /><strong>Jason Fonseca,</strong> Associte Director,
-                2DataFish <br /><strong>Liam Ma,</strong> Web Developer, ninemsn
-                <br /><strong>Matt Knox,</strong> Director / Web Developer,
-                Codelab
-            </p>
         </div>
 
         <footer class="py-4"></footer>
