--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <h2>References</h2>
                     <p>
                         <strong>John Bonato,</strong> Director, Cyberdesign
-                        <br /><strong>Jason Fonseca,</strong> Associte Director,
+                        <br /><strong>Jason Fonseca,</strong> Associate Director,
                         2DataFish <br /><strong>Liam Ma,</strong> Web Developer,
                         ninemsn <br /><strong>Matt Knox,</strong> Director / Web
                         Developer, Codelab <br /><strong>David Jones,</strong>
