--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         </li>
                         <li>Supervised and mentored junior staff members</li>
                         <li>
-                            Worked with team to move to automated E2E testing
+                            Worked with the Dev team to move to automated E2E testing
                             using Cypress and implement CI/CD using Bitbucket
                             pipelines and Docker
                         </li>
