--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                     <p>September 2018 - January 2022</p>
                     <ul>
                         <li>
-                            Design and built a custom User Interface component
+                            Designed and built a custom User Interface component
                             library with VueJS and Tailwind to allow for rapid
                             app development.
                         </li>
@@ -87,7 +87,7 @@
                         </li>
                         <li>
                             Extended the new web app by building a NodeJS based
-                            Rest API that integrates with the Stripe.
+                            Rest API that integrates with Stripe.
                         </li>
                         <li>Supervised and mentored junior staff members</li>
                         <li>
