--- a/index.html
+++ b/index.html
@@ -89,10 +89,10 @@
                             Extended the new web app by building a NodeJS based
                             Rest API that integrates with Stripe.
                         </li>
-                        <li>Supervised and mentored junior staff members</li>
+                        <li>Supervised and mentored junior staff members.</li>
                         <li>
                             Worked with the Dev team to move to automated E2E testing
-                            using Cypress and implement CI/CD using Bitbucket
+                            using Cypress and implemented CI/CD using Bitbucket
                             pipelines and Docker
                         </li>
                     </ul>
@@ -121,7 +121,7 @@
                     <hr />
                     <h3>Web Developer and Designer</h3>
                     <p><strong>Codelab Pty Ltd</strong></p>
-                    <p>November 2015 - June 2016 (Contractor)</p>
+                    <p>November 2015 - June 2016 (Contract)</p>
                     <ul>
                         <li>
                             Updates to an existing AngularJS website that uses
@@ -130,31 +130,31 @@
                         <li>Custom Magento 2 modules.</li>
                         <li>
                             Product configurator using AngularJS and Slim PHP
-                            (REST API)
+                            (REST API).
                         </li>
                     </ul>
                     <hr />
                     <h3>JavaScript Developer</h3>
                     <p><strong>2DataFish</strong></p>
-                    <p>March 2016 - June 2016 (Contractor)</p>
+                    <p>March 2016 - June 2016 (Contract)</p>
                     <ul>
                         <li>
                             Data analytics integration using Adobe Test and
-                            Target / Dynamic Test Management
+                            Target / Dynamic Test Management.
                         </li>
                         <li>Bespoke data extraction and transformation.</li>
                         <li>
-                            Clients include: Virgin Australia, PNO Cruises,
-                            Dulux
+                            Clients include: Virgin Australia, P&O Cruises,
+                            Dulux.
                         </li>
-                        <li>Stack used: NodeJS, Javascript, AWS</li>
+                        <li>Stack used: NodeJS, Javascript, AWS.</li>
                     </ul>
                     <hr />
                     <h3>Graphic Designer to Lead Developer</h3>
                     <p><strong>Cyberdesign Works</strong></p>
                     <p>2001 - 2015</p>
                     <p>
-                        When I started in 2001 Cyberdesign was almost
+                        When I started in 2001, Cyberdesign was almost
                         exclusively a print-based graphic design operation with
                         a staff of 3. My interest in web design helped transform
                         the company into a design and development agency that
