--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                     </ul>
                     <p><strong>Experience with</strong></p>
                     <ul>
-                        <li>GIT, AWS, Firebase, WordPress, Ubuntu</li>
+                        <li>TypeScript, Jira, GIT, AWS, Firebase, WordPress, Blender, Python</li>
                     </ul>
                     <h2>Education</h2>
                     <p>
