--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <div class="col-sm-8">
                     <h2>Experience</h2>
                     
-                    <h3>Senior Web Developer</h3>
+                    <h3>Lead Web Developer</h3>
                     <p><strong>PushPull Technology</strong></p>
                     <p>Pushpull Technology is a UK based FinTech company delivering live data and workflow solutions.</p>
                     <p>September 2018 - January 2022</p>
